--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Yovel | Home</title>
     <link rel="icon" href="icons/home.jpg" type="image/jpeg">
     <style>
+        /* Initial styles */
         body {
             background-color: #292c34;
             font-family: 'Segoe UI', sans-serif;
@@ -13,22 +14,28 @@
             text-align: center;
             margin: 0;
             padding: 0;
+            opacity: 0; /* Start with the page hidden */
+            animation: fadeIn 1.5s ease-in-out forwards; /* Fade-in animation */
         }
+
         h1 {
             font-size: 29px;
             font-family: 'Segoe UI';
             color: rgb(207, 207, 207);
         }
+
         .line-container {
             position: relative;
             margin: 20px auto;
             width: 30%;
         }
+
         .line-container hr {
             border: none;
             border-top: 2px solid rgb(207, 207, 207);
             margin: 0;
         }
+
         .line-container span {
             position: absolute;
             top: -10px; 
@@ -38,11 +45,13 @@
             padding: 0 10px;
             color: rgb(184, 184, 184);
         }
+
         h3 {
             color: rgb(184, 184, 184);
             text-align: left;
             padding-left: 550px;
         }
+
         .card-container {
             display: flex;
             justify-content: center;
@@ -50,6 +59,7 @@
             margin-top: 30px;
             flex-wrap: wrap;
         }
+
         .card {
             width: 100px;
             height: 100px;
@@ -64,9 +74,11 @@
             background-color: #000;
             border: 3px solid rgb(88, 0, 91);
         }
+
         .card:hover {
             transform: scale(1.1);
         }
+
         .card img {
             width: 100%;
             height: 100%;
@@ -74,6 +86,7 @@
             border-radius: 15px;
             z-index: 1;
         }
+
         .card h2 {
             z-index: 2;
             color: white;
@@ -85,11 +98,56 @@
             left: 50%;
             transform: translate(-50%, -50%);
         }
+
         a {
             text-decoration: none;
         }
-        h4{
+
+        h4 {
             color: rgb(184, 184, 184);
+        }
+
+        /* Fade-in Animation */
+        @keyframes fadeIn {
+            0% {
+                opacity: 0; /* Start fully transparent */
+            }
+            100% {
+                opacity: 1; /* End fully opaque */
+            }
+        }
+
+        /* Optional: If you want to animate specific elements */
+        h1, h2, h3, .card-container {
+            animation: slideUp 1s ease-out forwards;
+            opacity: 0;
+        }
+
+        @keyframes slideUp {
+            0% {
+                transform: translateY(20px);
+                opacity: 0;
+            }
+            100% {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        h1 {
+            animation-delay: 0.3s;
+        }
+
+        h2 {
+            animation-delay: 0.6s;
+        }
+
+        h3 {
+            animation-delay: 0.9s;
+        }
+
+        .card-container {
+            animation-delay: 1.2s;
         }
     </style>
 </head>
