--- a/index.html
+++ b/index.html
@@ -14,13 +14,55 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            opacity: 0; /* Start with the page hidden */
+            opacity: 0;
             animation: fadeIn 1.5s ease-in-out forwards; /* Fade-in animation */
         }
 
+        /* Navigation Styles */
+        nav {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: #1e2125;
+            z-index: 1000;
+            padding: 10px 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+        }
+
+        nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+
+        nav ul li {
+            display: inline-block;
+            padding: 15px 20px;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: white;
+            font-size: 18px;
+            padding: 5px 10px;
+            display: block;
+        }
+
+        nav ul li a:hover {
+            background-color: rgb(88, 0, 91);
+            border-radius: 5px;
+        }
+
+        /* Main Content Styles */
         h1 {
             font-size: 29px;
-            font-family: 'Segoe UI';
+            color: rgb(207, 207, 207);
+            margin-top: 80px; /* Adjust for fixed nav */
+        }
+
+        h2 {
             color: rgb(207, 207, 207);
         }
 
@@ -38,7 +80,7 @@
 
         .line-container span {
             position: absolute;
-            top: -10px; 
+            top: -10px;
             left: 50%;
             transform: translateX(-50%);
             background-color: #292c34;
@@ -46,83 +88,77 @@
             color: rgb(184, 184, 184);
         }
 
+        /* About Me Section */
         h3 {
             color: rgb(184, 184, 184);
             text-align: left;
             padding-left: 550px;
         }
 
-        .card-container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 30px;
-            flex-wrap: wrap;
+        /* Contact Form */
+        #contact {
+            padding: 10px;
+            width: 250px;
+            margin: 30px auto;
+            background-color: #1e2125;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
         }
 
-        .card {
-            width: 100px;
-            height: 100px;
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
-            border-radius: 15px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-            transition: transform 0.3s ease-in-out;
-            background-color: #000;
-            border: 3px solid rgb(88, 0, 91);
+        #contact h2 {
+            color: rgb(207, 207, 207);
+            font-size: 20px;
         }
 
-        .card:hover {
-            transform: scale(1.1);
-        }
-
-        .card img {
+        form input, form textarea {
+            padding: 10px;
+            margin-bottom: 10px;
             width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 15px;
-            z-index: 1;
+            border-radius: 5px;
+            border: 1px solid #ccc;
         }
 
-        .card h2 {
-            z-index: 2;
+        form textarea {
+            height: 60px;
+        }
+
+        form button {
+            padding: 10px 20px;
+            background-color: #88b3d4;
             color: white;
-            font-size: 1.5cm;
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-            font-weight: bold;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
         }
 
-        a {
+        form button:hover {
+            background-color: #67a1b8;
+        }
+
+        footer {
+            background-color: #1e2125;
+            padding: 20px;
+            color: #ccc;
+            text-align: center;
+        }
+
+        footer a {
+            color: #ccc;
             text-decoration: none;
-        }
-
-        h4 {
-            color: rgb(184, 184, 184);
+            margin: 0 10px;
         }
 
         /* Fade-in Animation */
         @keyframes fadeIn {
             0% {
-                opacity: 0; /* Start fully transparent */
+                opacity: 0;
             }
             100% {
-                opacity: 1; /* End fully opaque */
+                opacity: 1;
             }
         }
 
-        /* Optional: If you want to animate specific elements */
-        h1, h2, h3, .card-container {
-            animation: slideUp 1s ease-out forwards;
-            opacity: 0;
-        }
-
+        /* Slide-up Animation */
         @keyframes slideUp {
             0% {
                 transform: translateY(20px);
@@ -132,6 +168,11 @@
                 transform: translateY(0);
                 opacity: 1;
             }
+        }
+
+        h1, h2, h3, #contact form, .card-container, #social-media {
+            animation: slideUp 1s ease-out forwards;
+            opacity: 0;
         }
 
         h1 {
@@ -146,48 +187,87 @@
             animation-delay: 0.9s;
         }
 
-        .card-container {
-            animation-delay: 1.2s;
+        /* Social Media Section */
+        #social-media {
+            margin-top: 30px;
+            text-align: center;
         }
+
+        .social-icon {
+            margin: 15px;
+            display: inline-block;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background-color: #333;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+            overflow: hidden;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .social-icon img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .social-icon:hover {
+            transform: scale(1.1);
+        }
+
     </style>
 </head>
 <body>
+    <!-- Navigation -->
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#socials">Socials</a></li> 
+        </ul>
+    </nav>
+<br>
     <br>
     <h1>Homepage</h1>
     <br>
+    <br>
+    <!-- About Section -->
     <div class="line-container">
         <hr>
         <span>About us</span>
     </div>
     <h2 style="padding-right: 300px;">📚 | About me</h2>
+    <br>
     <h3>Hello! Welcome to my homepage. I am Yovel. <br> I like to play guitar and listen to music. I am a <br> student and a graphics designer.</h3>
     <br>
-    <div class="line-container">
-        <hr>
-        <span>Socials</span>
+<br>
+    <!-- Socials Section -->
+    <div id="socials">
+        <div class="line-container">
+            <hr>
+            <span>Socials</span>
+        </div>
+        <div id="social-media">
+            <a href="https://www.instagram.com/__yovel/" target="_blank">
+                <div class="social-icon">
+                    <img src="icons/ig.png" alt="Instagram">
+                </div>
+            </a>
+            <a href="https://github.com/ursyovel" target="_blank">
+                <div class="social-icon">
+                    <img src="icons/git.png" alt="Github">
+                </div>
+            </a>
+            <a href="https://guns.lol/urs.yovel" target="_blank">
+                <div class="social-icon">
+                    <img src="icons/guns.png" alt="guns.lol">
+                </div>
+            </a>
+        </div>
     </div>
-    <br>
-    <div class="card-container">
-        <a href="https://www.instagram.com/__yovel/" target="_blank">
-            <div class="card">
-                <img src="icons/ig.png" alt="Card Image 1">
-            </div>
-            <h4> Instagram </h4>
-        </a>
-
-        <a href="https://github.com/ursyovel" target="_blank">
-            <div class="card">
-                <img src="icons/git.png" alt="Card Image 2">
-            </div>
-            <h4> Github </h4>
-        </a>
-
-        <a href="https://guns.lol/urs.yovel" target="_blank">
-            <div class="card">
-                <img src="icons/guns.png" alt="Card Image 3">
-           </div>
-           <h4> guns.lol </h4>
-        </a>
-   </div>
+<br>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Yovel. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
