--- a/index.html
+++ b/index.html
@@ -355,6 +355,14 @@
                 <p>@Designer</p>
             </div>
         </a>
+        <!-- Experience Card 3 -->
+        <a href="https://www.instagram.com/ic_bishnu/" target="_blank">
+            <div class="experience-card">
+                <img src="icons/interact.png" alt="Interact Club">
+                <h3>Interact Club of Bishnu Memorial</h3>
+                <p>@IT Head (RY 2024-2025)</p>
+            </div>
+        </a>
     </div>
 
     <br>
