--- a/index.html
+++ b/index.html
@@ -391,6 +391,11 @@
                     <img src="icons/guns.png" alt="guns.lol">
                 </div>
             </a>
+            <a href="https://open.spotify.com/user/31l5kof3idezbzdbfq2zaafzjvhi" target="_blank">
+                <div class="social-icon">
+                    <img src="icons/spotify.png" alt="Spotify">
+                </div>
+            </a>
         </div>
     </div>
     <br>
