--- a/index.html
+++ b/index.html
@@ -1,407 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yovel | Home</title>
-    <link rel="icon" href="icons/home.jpg" type="image/jpeg">
-    <style>
-        /* Initial styles */
-        body {
-            background-color: #292c34;
-            font-family: 'Segoe UI', sans-serif;
-            color: rgb(207, 207, 207);
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            opacity: 0;
-            animation: fadeIn 1.5s ease-in-out forwards; /* Fade-in animation */
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>yovel’s portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;700&display=swap" rel="stylesheet"/>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        /* Navigation Styles */
-        nav {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background-color: #1e2125;
-            z-index: 1000;
-            padding: 10px 0;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-        }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: white;
+      color: #333;
+      padding: 40px;
+      font-size: 22px;
+      zoom: 1.2;
+      overflow-x: hidden;
+    }
 
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-bottom: 20px;
+      font-weight: bold;
+      font-size: 20px;
+    }
 
-        nav ul li {
-            display: inline-block;
-            padding: 15px 20px;
-        }
+    nav a {
+      margin-left: 25px;
+      text-decoration: none;
+      color: #000;
+    }
 
-        nav ul li a {
-            text-decoration: none;
-            color: white;
-            font-size: 18px;
-            padding: 5px 10px;
-            display: block;
-        }
+    .hero {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: flex-start;
+      margin-top: 10px;
+      gap: 40px;
+    }
 
-        nav ul li a:hover {
-            background-color: rgb(88, 0, 91);
-            border-radius: 5px;
-        }
+    .intro-left {
+      flex: 1;
+      min-width: 300px;
+    }
 
-        /* Main Content Styles */
-        h1 {
-            font-size: 29px;
-            color: rgb(207, 207, 207);
-            margin-top: 80px; /* Adjust for fixed nav */
-        }
+    .intro-line {
+      font-size: 64px;
+      font-weight: bold;
+      margin-bottom: 10px;
+      display: flex;
+      align-items: flex-start;
+      gap: 0;
+      opacity: 0;
+      animation: slideInLeft 2.5s ease-out forwards;
+      animation-delay: 1s;
+      line-height: 1;
+    }
 
-        h2 {
-            color: rgb(207, 207, 207);
-        }
+    .quotes {
+      color: deeppink;
+      font-size: 70px;
+      font-family: Arial, sans-serif;
+      transform: translateY(-10px);
+    }
 
-        .line-container {
-            position: relative;
-            margin: 20px auto;
-            width: 60%; /* Adjust width for smaller screens */
-        }
+    .y-letter {
+      color: black;
+    }
 
-        .line-container hr {
-            border: none;
-            border-top: 2px solid rgb(207, 207, 207);
-            margin: 0;
-        }
+    .rest-name {
+      color: deeppink;
+    }
 
-        .line-container span {
-            position: absolute;
-            top: -10px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: #292c34;
-            padding: 0 10px;
-            color: rgb(184, 184, 184);
-        }
+    .description {
+      font-size: 24px;
+      margin-top: 10px;
+      max-width: 650px;
+      line-height: 1.8;
+      opacity: 0;
+      animation: fadeIn 1.2s ease forwards;
+      animation-delay: 3s;
+    }
 
-        /* About Me Section */
-        h3 {
-            color: rgb(184, 184, 184);
-            text-align: center;
-        }
+    .contact-btn {
+      display: inline-block;
+      margin-top: 30px;
+      padding: 14px 26px;
+      background: plum;
+      color: black;
+      font-weight: bold;
+      border-radius: 10px;
+      text-decoration: none;
+      font-size: 20px;
+      transition: background 0.4s ease-in-out;
+      opacity: 0;
+      animation: fadeInUp 1s ease-out forwards;
+      animation-delay: 4s;
+    }
 
-        /* Experience Card Styles */
-        #experience {
-            margin-top: 20px;
-        }
+    .contact-btn:hover {
+      background: linear-gradient(45deg, #a100f2, #ff0099);
+      color: white;
+    }
 
-        #experience-cards {
-            display: flex;
-            justify-content: center; /* Center the cards horizontally */
-            flex-wrap: wrap; /* Allow wrapping on smaller screens */
-            gap: 100px; /* Add some spacing between cards */
-            margin-top: 20px;
-        }
+    .intro-right {
+      flex: 1;
+      min-width: 300px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      opacity: 0;
+      animation: fadeIn 1.5s ease-out forwards;
+      animation-delay: 5s;
+    }
 
-        .experience-card {
-            background-color: #333;
-            color: #ccc;
-            border-radius: 10px;
-            padding: 20px;
-            width: 250px; /* Adjusted card size */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-            transition: transform 0.3s ease-in-out;
-            text-align: left;
-            box-sizing: border-box; /* Prevent padding from affecting width */
-        }
+    .hero-img {
+      width: 100%;
+      max-width: 420px;
+      height: auto;
+      border-radius: 20px;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    }
 
-        .experience-card:hover {
-            transform: scale(1.05);
-        }
+    .hero-tags {
+      margin-top: 20px;
+      font-size: 22px;
+      font-style: italic;
+      color: #555;
+      white-space: nowrap;
+      overflow: hidden;
+      border-right: 2px solid #555;
+      width: 0;
+      animation: typing 3s steps(30, end) infinite;
+    }
 
-        .experience-card img {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
+    .designer-label {
+      margin-top: 10px;
+      font-size: 24px;
+      font-weight: bold;
+      color: #e91e63;
+      opacity: 0;
+      animation: fadeInUp 1s ease-out forwards;
+      animation-delay: 6s;
+    }
 
-        .experience-card h3 {
-            margin-top: 15px;
-            font-size: 20px;
-            color: rgb(184, 184, 184);
-        }
+    /* Animations */
+    @keyframes slideInLeft {
+      0% {
+        transform: translateX(-100px);
+        opacity: 0;
+      }
+      100% {
+        transform: translateX(0);
+        opacity: 1;
+      }
+    }
 
-        .experience-card p {
-            margin-top: 10px;
-            font-size: 16px;
-            text-align: center; /* Align the text center */
-        }
+    @keyframes fadeIn {
+      0% { opacity: 0; }
+      100% { opacity: 1; }
+    }
 
-        /* Bullet before the role text */
-        .experience-card p:before {
-            content: "• ";
-            margin-right: 10px;
-        }
+    @keyframes fadeInUp {
+      0% {
+        transform: translateY(20px);
+        opacity: 0;
+      }
+      100% {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
 
-        /* Footer Styles */
-        footer {
-            background-color: #1e2125;
-            padding: 20px;
-            color: #ccc;
-            text-align: center;
-            width: 100%;
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            margin: 0;
-        }
+    @keyframes typing {
+      0% { width: 0 }
+      50% { width: 220px }
+      100% { width: 0 }
+    }
 
-        footer a {
-            color: #ccc;
-            text-decoration: none;
-            margin: 0 10px;
-        }
+    @media (max-width: 768px) {
+      body {
+        font-size: 18px;
+        zoom: 1;
+      }
 
-        /* Fade-in Animation */
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-            }
-        }
+      .hero {
+        flex-direction: column;
+        align-items: center;
+      }
 
-        /* Slide-up Animation */
-        @keyframes slideUp {
-            0% {
-                transform: translateY(20px);
-                opacity: 0;
-            }
-            100% {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
+      .intro-left {
+        order: 1;
+        text-align: center;
+      }
 
-        h1, h2, h3, #contact form, .card-container, #social-media {
-            animation: slideUp 1s ease-out forwards;
-            opacity: 0;
-        }
+      .intro-line {
+        font-size: 50px;
+        justify-content: center;
+      }
 
-        h1 {
-            animation-delay: 0.3s;
-        }
+      .description {
+        font-size: 18px;
+        text-align: center;
+      }
 
-        h2 {
-            animation-delay: 0.6s;
-        }
+      .contact-btn {
+        font-size: 18px;
+      }
 
-        h3 {
-            animation-delay: 0.9s;
-        }
+      .intro-right {
+        order: 2;
+        margin-top: 25px;
+      }
 
-        /* Social Media Section */
-        #social-media {
-            margin-top: 30px;
-            text-align: center;
-            margin-bottom: 100px; /* Ensure social media section is above footer */
-        }
+      .hero-tags {
+        font-size: 18px;
+      }
 
-        .social-icon {
-            margin: 15px;
-            display: inline-block;
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background-color: #333;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-            overflow: hidden;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .social-icon img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .social-icon:hover {
-            transform: scale(1.1);
-        }
-
-        /* Responsive Design - Mobile Friendly */
-        @media (max-width: 768px) {
-            nav ul li {
-                display: block; /* Stack menu items vertically */
-                padding: 10px 0;
-            }
-
-            /* Ensure homepage content is not hidden under the nav */
-            body {
-                margin-top: 90px; /* Adds margin to push content down */
-            }
-
-            h1 {
-                font-size: 24px;
-                margin-top: 120px; /* Adjust for mobile view */
-            }
-
-            /* Adjust card layout for small screens */
-            #experience-cards {
-                flex-direction: column; /* Stack cards vertically on small screens */
-                gap: 10px;
-                justify-content: center; /* Center the cards */
-            }
-
-            .experience-card {
-                width: 80%; /* Make cards take more space on small screens */
-                margin: 10px auto;
-            }
-
-            .line-container {
-                width: 80%; /* Make the line container more flexible on small screens */
-            }
-
-            h3 {
-                padding-left: 20px;
-                padding-right: 20px;
-                font-size: 16px;
-            }
-
-            .social-icon {
-                width: 40px;
-                height: 40px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 20px;
-            }
-
-            h2 {
-                font-size: 18px;
-            }
-
-            h3 {
-                font-size: 14px;
-            }
-
-            #contact {
-                width: 90%;
-            }
-
-            .social-icon {
-                width: 35px;
-                height: 35px;
-            }
-        }
-    </style>
+      .designer-label {
+        font-size: 20px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <!-- Navigation -->
+  <header>
+    <div>yovel’s portfolio</div>
     <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#socials">Socials</a></li> 
-        </ul>
+      <a href="#">home</a>
+      <a href="experiences.html">experiences</a>
+      <a href="info.html">info</a>
     </nav>
-    <br>
-    <br>
-    <h1>Homepage</h1>
-    <br>
-    <br>
-    <!-- About Section -->
-    <div class="line-container">
-        <hr>
-        <span>About us</span>
-    </div>
-    <h2 style="padding-right: 300px;">📚 | About me</h2>
-    <br>
-    <h3>Hello! Welcome to my homepage. I am yovel. <br> You can contact me by checking my socials. I am a <br> student who likes to play guitar. This is my website. <br> <br> I am an graphics designer and I have mentioned my <br> work experience in the Experience section. You can <br> contact me from the social medias in the socials tabs</h3>
-    <br>
-    <br>
+  </header>
 
-    <!-- Experience Section -->
-    <div id="experience">
-        <div class="line-container">
-            <hr>
-            <span>Experience</span>
-        </div>
-    </div>
-    <br>
-
-    <!-- Experience Cards Section (Cards in same row below experience) -->
-    <div id="experience-cards">
-        <!-- Experience Card 1 -->
-        <a href="https://notex.vercel.app" target="_blank">
-            <div class="experience-card notex-card">
-                <img src="icons/notex.png" alt="Notex Network Logo">
-                <h3>Notex Network | Discontinued</h3>
-                <p>@Head Designer</p>
-            </div>
-        </a>
-        <!-- Experience Card 2 -->
-        <a href="http://hyperlandsmc.net/" target="_blank">
-            <div class="experience-card">
-                <img src="icons/hl.png" alt="HyperlandsMC Logo">
-                <h3>HyperlandsMC | Discontinued</h3>
-                <p>@Designer</p>
-            </div>
-        </a>
-        <!-- Experience Card 3 -->
-        <a href="https://www.instagram.com/ic_bishnu/" target="_blank">
-            <div class="experience-card">
-                <img src="icons/interact.png" alt="Interact Club">
-                <h3>Interact Club of Bishnu Memorial</h3>
-                <p>@IT Head (RY 2024-2025)</p>
-            </div>
-        </a>
+  <div class="hero">
+    <div class="intro-left">
+      <div class="intro-line">
+        <span class="quotes">“</span><span class="y-letter">y</span><span class="rest-name">ovel</span>
+      </div>
+      <p class="description">
+        A student, graphics designer from Dharan, Nepal who likes to explore and grab
+        new opportunities. I have a growing skill set in manipulating graphics, creating modern
+        webpages, and modelling 3D objects. With several real-world projects and collaborations,
+        I bring creativity and curiosity together to learn and build meaningful designs. ”
+      </p>
+      <a href="experiences.html" class="contact-btn">work experience</a>
     </div>
 
-    <br>
-    <!-- Added Contact Message -->
-    <h3>Contact me for more information on my working experience.</h3>
-
-    <!-- Socials Section -->
-    <div id="socials">
-        <div class="line-container">
-            <hr>
-            <span>Socials</span>
-        </div>
-        <div id="social-media">
-            <a href="https://www.instagram.com/__yovel/" target="_blank">
-                <div class="social-icon">
-                    <img src="icons/ig.png" alt="Instagram">
-                </div>
-            </a>
-            <a href="https://github.com/ursyovel" target="_blank">
-                <div class="social-icon">
-                    <img src="icons/git.png" alt="Github">
-                </div>
-            </a>
-            <a href="https://guns.lol/urs.yovel" target="_blank">
-                <div class="social-icon">
-                    <img src="icons/guns.png" alt="guns.lol">
-                </div>
-            </a>
-            <a href="https://open.spotify.com/user/31l5kof3idezbzdbfq2zaafzjvhi" target="_blank">
-                <div class="social-icon">
-                    <img src="icons/spotify.png" alt="Spotify">
-                </div>
-            </a>
-        </div>
+    <div class="intro-right">
+      <img src="icons/pfp.png" alt="Profile picture" class="hero-img" />
+      <div class="hero-tags">design. code. explore.</div>
+      <div class="designer-label">designer</div>
     </div>
-    <br>
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 Yovel. All Rights Reserved.</p>
-    </footer>
+  </div>
 </body>
 </html>
