--- a/info.html
+++ b/info.html
@@ -39,6 +39,14 @@
       animation: fadeIn 1s ease-in;
     }
 
+    .section-title {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+      color: black;
+      animation: fadeIn 1s ease-in;
+    }
+
     .social-icons {
       display: flex;
       justify-content: center;
@@ -145,6 +153,10 @@
   </header>
 
   <main class="main-content">
+
+    <!-- New Socials Heading -->
+    <h2 class="section-title">Socials</h2>
+
     <div class="social-icons">
       <a href="https://instagram.com/__yovel/" target="_blank"><img src="icons/ig.png" alt="Instagram"></a>
       <a href="https://open.spotify.com/user/31l5kof3idezbzdbfq2zaafzjvhi" target="_blank"><img src="icons/spotify.png" alt="Spotify"></a>
@@ -153,7 +165,7 @@
     </div>
 
     <p class="contact-text">
-      you can contact me from any of the social medias present above
+      you can check my socials which are present above
     </p>
 
     <hr>
