--- a/experiences.html
+++ b/experiences.html
@@ -174,7 +174,7 @@
         </ul>
       </a>
 
-      <a class="card" href="https://instagram.com/@ic_bishnu" target="_blank">
+      <a class="card" href="https://instagram.com/ic_bishnu" target="_blank">
         <img src="icons/rotary.jpg" alt="Interact Club">
         <h2>Interact Club of Bishnu Memorial</h2>
         <ul>
