--- a/experiences.html
+++ b/experiences.html
@@ -181,6 +181,14 @@
           <li>@ IT Head (RY 2024-2025)</li>
         </ul>
       </a>
+
+      <a class="card" href="https://www.instagram.com/zone1_interactdistrict3292?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+        <img src="icons/theme.png" alt="Zone 1 Interact District 3292">
+        <h2>Zone 1 Interact District 3292</h2>
+        <ul>
+          <li>@ Zonal IT Head (RY 2025-2026)</li>
+        </ul>
+      </a>
     </div>
 
     <p class="footer-text">
